<resources>
    <string name="app_name">Brealth</string>
    <string name="press_start">Press Start</string>
    <string name="brain_mainmenu">Brain</string>
    <string name="health_mainmenu">Health</string>
    <string name="brealth_mainmenu">Brealth</string>
    <string name="brainexercise_button">Übungen</string>
    <string name="brain_daily_task">tägliche Aufgabe</string>
    <string name="health_zentrale_button">Nährstoffzentrale</string>
    <string name="health_rezepte_button">Rezepte</string>
    <string name="health_tipps_button">Tipps</string>
    <string name="health_bmi_button">BMI-Rechner</string>
    <string name="brealth_test_button">Test</string>
    <string name="brealth_tasks_button">Übungen</string>
    <string name="title_brainmenu">Gehirntraining</string>
    <string name="braintask_button1">Rechnen</string>
    <string name="braintask_button2">Lesen</string>
    <string name="braintask_button3">Merken</string>
    <string name="braintask_button4">Logik</string>
    <string name="braintask_button5">Farben</string>
    <string name="rechnentask_button1">Rechnen20</string>
    <string name="rechnentask_button2">Rechnen50</string>
    <string name="rechnentask_button3">Rechnen75</string>
    <string name="rechnentask_button4">Rechnen100</string>
    <string name="rechnentask_button5">Rechnen200</string>
    <string name="rechnenend_ergebnis">Ergebnis</string>
    <string name="submitRechnen_button">Submit</string>
    <string name="bemerkung_rechnenend">Dauer:</string>
    <string name="falsch_rechnenend">Falsch:</string>
    <string name="memorycard_unrevealedText">/@</string>

    <string name="title_activity_zentrale">Nährstoffzentrale</string>
    <string name="title_nahrung">Nahrungsmittel</string>
    <string name="title_tagebuch">Tagebuch</string>
    <string name="title_statistik">Statistik</string>

    <string name="lesen_end_button">Fertig</string>
    <string name="farben_easymode_button">Easy Mode</string>
    <string name="farben_hardmode_button">Hard Mode</string>
    <string name="lesentask_rules">Lesen Sie den automatisch scrollenden Text laut und ordentlich durch. Wenn Sie nicht mehr mitkommen, drücken Sie den Fertig Button.</string>
    <string name="memorytask_rules">In dieser Übung haben Sie die Möglichkeit Ihre Gedächtnis durch ein einfaches Memory Spiel zu trainieren.</string>
    <string name="yogamemorytask_rules">In dieser Übung haben Sie die Möglichkeit gleichzeitig Ihr Gedächtnis durch ein Memory-Spiel, sowie Ihren Körper durch Yoga zu trainieren. Wenn Sie ein zusammenpassendes Kartenpaar aufdecken, müssen Sie die Yoga-Übung die darauf abgebildet ist ausführen</string>
    <string name="farbentaskEM_rules">Klicken Sie die Richtig Taste wenn die jeweilige "Farbe" geschrieben ist"</string>
    <string name="farbentaskHM_rules">-Tippen Sie den Text der in der jeweiligen Farbe geschriebenoder ist \n-Tippen sie den Text wenn Farbe
                                      geschrieben ist \n-Klicke nicht vorhanden Taste wenn nicht existend</string>
    <string name="logiktask_rules">Finden Sie heraus was ? ist</string>
    <string name="startButtonDailyTask">Start Task</string>
    <string name="readyEffort_button">Fertig</string>
    <string name="powerlogic_rules"> "Halten Sie für diese Aufgaben Hanteln parat\n\n""Sie werden eine Reihe von gleichen Bildern erhalten die aufaddiert eine Zahl ergibt\n"
        "Dies gilt ebenfalls für die zweite Reihe\n"
        "In der letzten müssen Sie die jeweiligen Bilder addieren und das Ergebnis angeben\n\n"
        "Danach müssen Sie eines der gezeigten Bilder ausführen.\n"
        "Sie bekommen 10 Sekunden um die Übung anzuschauen und müssen Sie solange ausführen wie das Ergebis der Rechnung war</string>
    <string name="effortcalculating20">EffortCalculating20</string>
    <string name="effortcalculating50">EffortCalculating50</string>
    <string name="effortcalculating75">EffortCalculating75</string>
    <string name="effortcalculating100">EffortCalculating100</string>
    <string name="effortcalculating200">EffortCalculating200</string>
    <string name="evaluationtitle">Wie viele Aufgaben konnten Sie nicht lösen?</string>
    <string name="powerlogic">PowerLogic</string>
    <string name="mind_colors">Mind Colors</string>
    <string name="yogamemory">YogaMemory</string>
    <string name="effortcalculating">EffortCalculating</string>
    <string name="vocablerun">VocableRun</string>
    <string name="powerlogic_Dlg_Beschreibung">Führen Sie die Übung aus</string>
    <string name="testresult_button">Show Results</string>

</resources>
