<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/health_zentrale_button"
        android:text="@string/health_zentrale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/health_rezepte_button"
        android:text="@string/health_rezepte_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/health_tipps_button"
        android:text="@string/health_tipps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/health_bmi_button"
        android:text="@string/health_bmi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>