<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/brain_button"
        android:text="@string/brain_mainmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gotoBrainMenu"/>

    <Button
        android:id="@+id/health_button"
        android:text="@string/health_mainmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gotoHealthMenu"/>

    <Button
        android:id="@+id/brealth_button"
        android:text="@string/brealth_mainmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gotoBrealthMenu"/>

</LinearLayout>