<?xml version="1.0" encoding="utf-8"?>

<!-- Created by StefanSator on 05.05.18 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblack"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview_rechnentasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/rechnentask_button1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonheight_rechnentaskbuttons"
                android:layout_marginBottom="-5dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginTop="-5dp"
                android:backgroundTint="@color/neonred"
                android:onClick="gotoRechnen"
                android:padding="0dp"
                android:text="@string/rechnentask_button1"
                android:textSize="@dimen/textsize_rechnentaskbuttons" />

            <Button
                android:id="@+id/rechnentask_button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonheight_rechnentaskbuttons"
                android:layout_marginBottom="-5dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginTop="-5dp"
                android:backgroundTint="@color/brightred"
                android:padding="0dp"
                android:onClick="gotoRechnen"
                android:text="@string/rechnentask_button2"
                android:textSize="@dimen/textsize_rechnentaskbuttons" />

            <Button
                android:id="@+id/rechnentask_button3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonheight_rechnentaskbuttons"
                android:layout_marginBottom="-5dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginTop="-5dp"
                android:backgroundTint="@color/bluegreen"
                android:padding="0dp"
                android:onClick="gotoRechnen"
                android:text="@string/rechnentask_button3"
                android:textSize="@dimen/textsize_rechnentaskbuttons" />

            <Button
                android:id="@+id/rechnentask_button4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonheight_rechnentaskbuttons"
                android:layout_marginBottom="-5dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginTop="-5dp"
                android:backgroundTint="@color/blue"
                android:padding="0dp"
                android:onClick="gotoRechnen"
                android:text="@string/rechnentask_button4"
                android:textSize="@dimen/textsize_rechnentaskbuttons" />

            <Button
                android:id="@+id/rechnentask_button5"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonheight_rechnentaskbuttons"
                android:layout_marginBottom="-5dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginTop="-5dp"
                android:backgroundTint="@color/darkblue"
                android:padding="0dp"
                android:onClick="gotoRechnen"
                android:text="@string/rechnentask_button5"
                android:textSize="@dimen/textsize_rechnentaskbuttons" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>